--- a/views/finduser.ejs
+++ b/views/finduser.ejs
@@ -64,7 +64,7 @@
                                         
                                     </ul>
                                     <form action="/match/1" method="post">
-                                        <div class="text-center" style="padding-bottom: 50px; position:absolute; left:141px; bottom:0px"> 
+                                        <div class="text-center" style="padding-bottom: 50px;  bottom:0px"> 
                                             <button class="btn btn-danger btn-bordred btn-rounded waves-effect waves-light" type="submit">대리찾기</button>
                                         </div>
                                     
@@ -108,7 +108,7 @@
                                                     </label>
                                                 </div>
                                     
-                                    <div class="text-center" style="padding-bottom: 50px; position:absolute; left:141px; bottom:0px"> 
+                                    <div class="text-center" style="padding-bottom: 50px;  bottom:0px"> 
                                         <button class="btn btn-danger btn-bordred btn-rounded waves-effect waves-light" type="submit">대리찾기</button>
                                     </div>
                                     
@@ -164,7 +164,7 @@
                                                         </label>
                                                     </div>
                                     
-                                            <div class="text-center" style="padding-bottom: 50px; position:absolute; left:141px; bottom:0px"> 
+                                            <div class="text-center" style="padding-bottom: 50px;  bottom:0px"> 
                                                 <button class="btn btn-danger btn-bordred btn-rounded waves-effect waves-light" type="submit">대리찾기</button>
                                             </div>
                                     
