--- a/views/med.ejs
+++ b/views/med.ejs
@@ -26,18 +26,11 @@
                             
                             
                             <div class="list-group mail-list  m-t-20">
-                                <form action='/med' method='post'>
-                                    <input type="hidden" value=1><input value="금액높은순" type="submit" name="which" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>
-                                </form>
-                                <form>
-                                    <input type="hidden" value=1><input value="금액낮은순" type="submit" name="which" class="list-group-item b-0"><<i class="fa fa-star-o m-r-10"></i>
-                                </form>    
-                                <input type="submit" value="2" name="which" class="list-group-item b-0">금액낮은순
-                                <input type="submit" value="3"  name="which" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순
-                                <input type="submit" value="4" name="which" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>금액높은순
-                            </form>
+                                <a href="#" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순</a>
+                                <a href="#" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>금액낮은순</a>
+                                <a href="#" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순</a>
+                                <a href="#" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>마감임박순</a>
                             </div>
-                            
                             <!--<div class="list-group mail-list  m-t-20">-->
                             <!--    <a href="mail-inbox.html" class="list-group-item b-0 active"><i class="fa fa-download m-r-10"></i>Inbox <b>(8)</b></a>-->
                             <!--    <a href="#" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>Starred</a>-->
