--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -134,7 +134,7 @@
                             </li>
                             
                             <li class="has-submenu">
-                                <a><i class="md md-invert-colors-on"></i>데이터저장소-출시예정</a>
+                                <a href='/coming'><i class="md md-invert-colors-on"></i>데이터저장소-출시예정</a>
                             </li>
                             <li class="has-submenu">
                                 <a href="/howto"><i class="md md-class"></i>이용방법</a>
