--- a/views/med.ejs
+++ b/views/med.ejs
@@ -69,16 +69,16 @@
                         
                         <div class="row">
                     <div class="col-sm-12">
-                        <div class="card-box">
+                        <div class="card-box" style="">
                             
-                            <table id="demo-foo-filtering" class="table toggle-circle m-b-0" data-page-size="7">
+                            <table id="demo-foo-filtering" class="table toggle-circle m-b-0" data-page-size="7" style="font-size:17px; padding-bottom: 30px;">
                                 <thead>
                                     <tr>
                                         <th data-toggle="false">작성자</th>
                                         <th>제목</th>
                                         <th data-hide="phone">내용</th>
                                         <th data-hide="phone, tablet">날짜</th>
-                                        <th data-hide="phone, tablet">상태</th>
+                                        <th data-hide="phone, tablet">&nbsp&nbsp&nbsp상태</th>
                                     </tr>
                                 </thead>
                                 <div class="form-inline m-b-20">
