--- a/views/my_show.ejs
+++ b/views/my_show.ejs
@@ -167,8 +167,8 @@
                                             <div class="form-group">
                                                 <label for="RePassword">Re-Password</label><%= passwordError?passwordError:""%>
                                                 <input type="password" placeholder="6 - 15 Characters" id="RePassword"name="user[newpassword2]" class="form-control">
-                                            </div>
-                                            <button class="btn btn-primary waves-effect waves-light w-md" type="submit">Save</button>
+                                            </div><br>
+                                            <center><button class="btn btn-primary waves-effect waves-light w-md" type="submit">Save</button></center>
                                         </form>
                                         <!--form action="/my?_method=delete" method="post">
                                             <button class="btn btn-primary waves-effect waves-light w-md" type="submit">탈퇴</button>
@@ -181,7 +181,7 @@
                     </div> <!-- end col -->
                 </div>
                 <!-- end row -->
-
+<br>
                 <!-- Footer -->
                 <footer class="footer text-right">
                     <div class="container">
