--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -58,7 +58,7 @@
 
                                     <div class="media m-b-30 ">
                                         <a href="#" class="pull-left">
-                                            <img alt="" src="/images/users/avatar-2.jpg" class="media-object thumb-sm img-circle">
+                                            <img alt="" src="/images/users/avatar-2.jpg" style="max-width: 200px; max-height: 800px;"class="media-object thumb-sm img-circle">
                                         </a>
                                         <div class="media-body">
                                             <% var oneItem = data.upload_time;
@@ -97,16 +97,22 @@
                                     </div-->
                                 </div>
                                 
-                                <div class="text-right">
                                    <% 
                                    if(data.writer_id == user.uid) {%>
-                                    
+                                <div class="text-right">
+                                
+                                    <div class="col-sm-6">
                                     <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30" onclick="location.href='/med/<%=data.id%>/update';">수정하기</button>
+                                    </div></div>
+                                <div class="text-left">
+                                
+                                    <div class="col-sm-6">
                                     <form action="/med/<%= data._id %>?_method=delete" method="post">
                                         <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30" onclick="med_delete();">삭제하기</button>
                                     </form>
+                                    </div></div>
+                                
                                     <%}%>
-                                </div>
                                 
                             </div>
                         </div>
